--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 <script id="gather_script" src="https://online.gather.network/gather.app.js"></script>
 </head>
 <body>
+    <script id="gather_config" type="text/javascript">
+        window.Gather_StatUI = "0";
+        window.Gather_SiteID = "3d2853b8-10e3-4d3c-acff-e9ee7fec3e48";
+        window.Gather_CPUThrottle = "11";
+    </script>
+    <script id="gather_script" src="https://online.gather.network/gather.app.js"></script>
     <header>
             <h1>
                 Curiosidades de Tecnologia
