--- a/02.0segundapagina.html
+++ b/02.0segundapagina.html
@@ -318,7 +318,7 @@ Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosid
 
 </main>
 <footer>
-<p>Site criado por lucivaldo ferreira .</p>
+<p>Site criado por lucivaldo ferreira----- .</p>
 
 </footer>
 
